# CCMath

./: .gitignore  Cargo.toml  README.md  contributing.md  formulas.typ
.zed/: settings.json
Demo/: libccmath.rlib
Demo/linux/: libccmath.rlib
src/: lib.rs  overloading.rs  tests.rs
