[package]
name = "ccmath"
description = "A simple library for doing math with complex numbers"
version = "0.2.1"
edition = "2024"
license = "MIT"
keywords = ["mathematics", "complex"]
repository = "https://github.com/Definitely-Not-A-Dolphin/CCMath"
readme = "README.md"
authors = ["Derek Verduijn"]

[dependencies]
num-traits = "0.2.19"
